--- a/locales/ja-KS.yml
+++ b/locales/ja-KS.yml
@@ -82,10 +82,8 @@ somethingHappened: "なんやアカンことが起きたで"
 retry: "もっぺんやる？"
 pageLoadError: "ページの読み込みに失敗してもた…　えろうすんまへん"
 pageLoadErrorDescription: "これは普通、ネットワークかブラウザキャッシュが原因やからね。キャッシュをクリアするか、もうちっとだけ待ってくれへんか？"
-serverIsDead: "The server is not responding. Please wait for a while before trying
-  again."
-youShouldUpgradeClient: "To display this page, please reload and use a new version
-  client. "
+serverIsDead: "サーバーの応答がおまへん。ちーとの間待ってからもっかい試してみぃな。"
+youShouldUpgradeClient: "このページを表示するには、リロードして新しいバージョンのクライアントを使うてや。"
 enterListName: "リスト名を入れてや"
 privacy: "プライバシー"
 makeFollowManuallyApprove: "自分が認めた人だけがこのアカウントをフォローできるようにする"
@@ -109,7 +107,7 @@ clickToShow: "押したら見えるで"
 sensitive: "ちょっとアカンやつやで"
 add: "増やす"
 reaction: "リアクション"
-reactionSetting: "Reaction that will be displayed in Picker. "
+reactionSetting: "ピッカーに表示しはるリアクション"
 reactionSettingDescription2: "ドラッグで並び替え、クリックで削除、＋を押して追加やで。"
 rememberNoteVisibility: "公開範囲覚えといて"
 attachCancel: "のっけるのやめる"
@@ -144,9 +142,8 @@ flagAsBot: "ワイはBotや 🤖"
 flagAsBotDescription: "もしこのアカウントがプログラムによって運用されるんやったら、このフラグをオンにしてたのむで。オンにすると、反応の連鎖を防ぐためのフラグとして他の開発者に役立ったり、Firefishのシステム上での扱いがBotに合ったもんになったりするんやで。"
 flagAsCat: "ワイはCatや 🐯"
 flagAsCatDescription: "自分、猫ちゃんならこのフラグつけてみ？"
-flagShowTimelineReplies: "It will display the reply to the note in the timeline. "
-flagShowTimelineRepliesDescription: "It will display the reply to notes other than
-  the user notes in the timeline when you turn it on. "
+flagShowTimelineReplies: "タイムラインに返信を表示させたる"
+flagShowTimelineRepliesDescription: "有効にすると、タイムラインに他のユーザー宛ての投稿も表示したるで。"
 autoAcceptFollowed: "フォローしとるユーザーからのフォローリクエストを勝手に許可しとく"
 addAccount: "アカウントを追加"
 loginFailed: "ログインに失敗してしもうた…"
@@ -241,9 +238,8 @@ resetAreYouSure: "リセットしてええん？"
 saved: "保存したで！"
 messaging: "チャット"
 upload: "アップロード"
-keepOriginalUploading: "Retain the original image. "
-keepOriginalUploadingDescription: "When uploading the clip, the original version will
-  be retained. Turning it of then uploading will produce images for public use. "
+keepOriginalUploading: "画質をそのまんまにする"
+keepOriginalUploadingDescription: "オリジナルの画像をそのまんまアップロードするで。オフにすると、ファイルサイズを削減したWeb公開用画像を生成したるで。"
 fromDrive: "ドライブから"
 fromUrl: "URLから"
 uploadFromUrl: "URLアップロード"
@@ -1443,6 +1439,7 @@ _postForm:
     c: なに考えとりまっか？
     d: なんや言いたいんちゃいますか？
     f: あんさん書くんを待っとるんどす...
+    a: いまなにしとん？
 flagSpeakAsCat: 猫弁で話す
 flagSpeakAsCatDescription: 猫モードが有効の場合にオンにすると、ワレの投稿の「な」を「にゃ」に変換するで。
 welcomeBackWithName: おおきに、{name}はん
