--- a/locales/bul_BG.yml
+++ b/locales/bul_BG.yml
@@ -474,3 +474,4 @@ _preferencesBackups:
   cannotLoad: Неуспешно зареждане
 editWidgetsExit: Готово
 done: Готово
+emailRequiredForSignup: Изискване за адрес на е-поща за регистриране
