--- a/locales/id-ID.yml
+++ b/locales/id-ID.yml
@@ -245,7 +245,7 @@ currentPassword: "Kata sandi saat ini"
 newPassword: "Kata sandi baru"
 newPasswordRetype: "Ulangi kata sandi baru"
 attachFile: "Lampirkan berkas"
-more: "Lagi !"
+more: "Lagi!"
 featured: "Sorotan"
 usernameOrUserId: "Nama pengguna atau User ID"
 noSuchUser: "Pengguna tidak ditemukan"
@@ -2173,3 +2173,5 @@ detectPostLanguage: Deteksi bahasa secara otomatis dan tampilkan tombol terjemah
 indexableDescription: Perbolehkan pencarian di sini untuk menampilkan kiriman publikmu
 indexable: Dapat diindeks
 languageForTranslation: Bahasa terjemahan kiriman
+openServerInfo: Tampilkan informasi server dengan mengeklik ticker server di sebuah
+  kiriman
