--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -2155,3 +2155,5 @@ privacyForNerds: "Privacy protection in public places"
 disableToast: "Don't show the \"Welcome back\" banner"
 hideMyIcon: "Hide my icon"
 hideMyName: "Hide my name and ID"
+searchEngine: "Search engine used in search bar MFM"
+postSearch: "Post search on this server"
