--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -132,6 +132,7 @@ rememberNoteVisibility: "Remember post visibility settings"
 attachCancel: "Remove attachment"
 markAsSensitive: "Mark as NSFW"
 unmarkAsSensitive: "Unmark as NSFW"
+clickToShowPatterns: "Click to show module patterns"
 enterFileName: "Enter filename"
 mute: "Mute"
 unmute: "Unmute"
