feat: ability to make existing posts private

--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -2176,3 +2176,5 @@ hideMyIcon: "Hide my icon"
 hideMyName: "Hide my name and ID"
 searchEngine: "Search engine used in search bar MFM"
 postSearch: "Post search on this server"
+makePrivate: "Make private"
+makePrivateConfirm: "This operation will send a deletion request to remote servers and change the visibility to private. Proceed?"
