chore: add translation (zh-TW)

--- a/locales/zh-TW.yml
+++ b/locales/zh-TW.yml
@@ -2002,3 +2002,5 @@ preventMisclick: 預防誤觸
 hideFollowButtons: 隱藏通知頁面及個人檔案頁面的追隨按鈕
 showPreviewByDefault: 自動開啟發文介面中的預覽顯示
 originalFeature: 獨家功能
+makePrivate: 設為祕密
+makePrivateConfirm: 此操作將向遠端伺服器發送刪除請求，並將貼文的公開範圍設為「祕密」。是否繼續？
