chore: rename default emoji mod permission from 'none' to 'unauthorized' considering name collision in Rust

--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -2004,7 +2004,7 @@ confirm: "確認"
 emojiModPerm: "カスタム絵文字の管理"
 emojiModPermDescription: "追加: カスタム絵文字の新規追加と新規追加されたカスタム絵文字（正確には、タグとカテゴリとライセンスが設定されていないカスタム絵文字）へのタグとカテゴリとライセンスの設定を許可します。\n追加と変更:「追加」の権限に加え、既存の絵文字の名前・カテゴリ・タグ・ライセンスの変更を許可します。\n全て許可:「追加と変更」の権限に加え、既存のカスタム絵文字の削除を許可します。\nこの設定にかかわらず、サーバーの管理者およびモデレーターには「全て許可」の権限が与えられます。"
 _emojiModPerm:
-  none: "不許可"
+  unauthorized: "不許可"
   add: "追加"
   mod: "追加と変更"
   full: "全て許可"
