--- a/locales/zh-TW.yml
+++ b/locales/zh-TW.yml
@@ -2000,7 +2000,7 @@ disableToast: 不顯示「歡迎回來，◯◯」
 emojiModPerm: 自訂表情符號的管理
 emojiModPermDescription: "新增: 允許新增自訂表情符號，並允許設定尚未設定標籤/類別/授權條款的現有自訂表情符號。\n新增及編輯: 除了「新增」的權限之外，也允許編輯現有自訂表情符號的標籤/類別/授權條款\n全部允許: 除了「新增及編輯」的權限之外，也允許刪除現有的自訂表情符號。\n伺服器管理員及板主無論此設定為何皆有「全部允許」的權限。"
 _emojiModPerm:
-  none: 不允許
+  unauthorized: 不允許
   add: 新增
   mod: 新增及編輯
   full: 全部允許
