--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -312,7 +312,7 @@ agreeTo: "I agree to {0}"
 tos: "Terms of Service"
 start: "Begin"
 home: "Home"
-remoteUserCaution: "Information from remote users may be incomplete."
+remoteUserCaution: "Information from remote users are incomplete."
 activity: "Activity"
 images: "Images"
 birthday: "Birthday"
@@ -2188,5 +2188,5 @@ _iconSets:
   regular: "Regular"
   fill: "Filled"
   duotone: "Duotone"
-moreUrls: "pinned pages"
+moreUrls: "Pinned pages"
 moreUrlsDescription: "Enter the pages you want to pin to the help menu in the lower left corner using this notation:\n\"Display name\": https://example.com/"
