feat: pull-to-refresh
Co-authored-by: syuilo <Syuilotan@yahoo.co.jp>
Co-authored-by: u1-liquid <17376330+u1-liquid@users.noreply.github.com>
Co-authored-by: naskya <m@naskya.net>

--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -1165,6 +1165,10 @@ detectPostLanguage: "Automatically detect the language and show a translate butt
 vibrate: "Play vibrations"
 openServerInfo: "Show server information by clicking the server ticker on a post"
 iconSet: "Icon set"
+releaseToReload: "Release to reload"
+reloading: "Reloading"
+pullDownToReload: "Pull down to reload"
+enableTimelineStreaming: "Update timelines automatically"
 
 _sensitiveMediaDetection:
   description: "Reduces the effort of server moderation through automatically recognizing
