--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -2196,3 +2196,5 @@ _iconSets:
   duotone: "Duotone"
 moreUrls: "Pinned pages"
 moreUrlsDescription: "Enter the pages you want to pin to the help menu in the lower left corner using this notation:\n\"Display name\": https://example.com/"
+enablePullToRefresh: "Enable \"Pull down to refresh\""
+pullToRefreshThreshold: "Pull distance for reloading"
