--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -2038,3 +2038,5 @@ releaseToReload: "離して再読み込み"
 reloading: "読み込み中"
 pullDownToReload: "下に引っ張って再読み込み"
 enableTimelineStreaming: "タイムラインを自動で更新する"
+enablePullToRefresh: "「下に引っ張って再読み込み」を有効にする"
+pullToRefreshThreshold: "再読み込みするために引っ張る距離"
