--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -1171,6 +1171,8 @@ pullDownToReload: "Pull down to reload"
 enableTimelineStreaming: "Update timelines automatically"
 useEmojiCdn: "Get Twemoji from CDN"
 useEmojiCdnDescription: "Use Twemoji from the JSDelivr CDN instead of the server's assets."
+suggested: "Suggested"
+noLanguage: "No language"
 
 _sensitiveMediaDetection:
   description: "Reduces the effort of server moderation through automatically recognizing
