feat: show changelog on updates

--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -917,6 +917,7 @@ useBlurEffect: "Use blur effects in the UI"
 learnMore: "Learn more"
 misskeyUpdated: "Firefish has been updated!"
 whatIsNew: "Show changes"
+releaseNotes: "Changes"
 translate: "Translate"
 translatedFrom: "Translated from {x}"
 accountDeletionInProgress: "Account deletion is currently in progress"
