--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -831,6 +831,7 @@ useBlurEffect: "UIにぼかし効果を使用"
 learnMore: "詳しく"
 misskeyUpdated: "Firefishが更新されました！"
 whatIsNew: "更新情報を見る"
+releaseNotes: "更新情報"
 translate: "翻訳"
 translatedFrom: "{x}から翻訳"
 accountDeletionInProgress: "アカウントの削除が進行中です"
