--- a/locales/zh-CN.yml
+++ b/locales/zh-CN.yml
@@ -801,6 +801,7 @@ useBlurEffect: "在 UI 上使用模糊效果"
 learnMore: "更多信息"
 misskeyUpdated: "Firefish 更新完成！"
 whatIsNew: "显示更新信息"
+releaseNotes: "更新信息"
 translate: "翻译"
 translatedFrom: "从 {x} 翻译"
 accountDeletionInProgress: "正在删除账号"
