--- a/locales/zh-TW.yml
+++ b/locales/zh-TW.yml
@@ -797,6 +797,7 @@ useBlurEffect: "在 UI 上使用模糊效果"
 learnMore: "更多資訊"
 misskeyUpdated: "Firefish 更新完成！"
 whatIsNew: "顯示更新資訊"
+releaseNotes: "更新資訊"
 translate: "翻譯"
 translatedFrom: "從 {x} 翻譯"
 accountDeletionInProgress: "正在刪除帳戶"
