feat: ability to publish timelines in signed out UI

--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -2201,3 +2201,5 @@ moreUrls: "Pinned pages"
 moreUrlsDescription: "Enter the pages you want to pin to the help menu in the lower left corner using this notation:\n\"Display name\": https://example.com/"
 enablePullToRefresh: "Enable \"Pull down to refresh\""
 pullToRefreshThreshold: "Pull distance for reloading"
+publishTimelines: "Publish timelines for visitors"
+publishTimelinesDescription: "If enabled, the Local and Global timeline will be shown on {url} even when signed out."
