--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -2043,3 +2043,5 @@ pullDownToReload: "下に引っ張って再読み込み"
 enableTimelineStreaming: "タイムラインを自動で更新する"
 enablePullToRefresh: "「下に引っ張って再読み込み」を有効にする"
 pullToRefreshThreshold: "再読み込みするために引っ張る距離"
+publishTimelines: "非ログインユーザーにもタイムラインを公開する"
+publishTimelinesDescription: "有効にすると、{url} でローカルタイムラインとグローバルタイムラインが公開されます。"
